fashion buttons dark mode fixed

--- a/src/styles/implatform-fashion-theme-styles.scss
+++ b/src/styles/implatform-fashion-theme-styles.scss
@@ -284,6 +284,8 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
   $foreground: map-get($theme, foreground);
   $sidenav-background-color: mat-color($background, status-bar);
   $is-dark-theme: map-get($theme, is-dark);
+  $background-primary-button: if($is-dark-theme, transparent, #ffffff);
+  $background-primary-button: if($is-dark-theme, transparent, #ffffff);
 
   .o-app-header {
     nav {
@@ -533,15 +535,7 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
     &.mat-button-base[ng-reflect-dialog-result="0"],
     &.mat-button-base[ng-reflect-dialog-result="true"] {
       color: mat-color($primary, 500);
-
-      @if $is-dark-theme {
-        background-color: transparent;
-      }
-
-      @else {
-        background-color: #ffffff;
-      }
-
+      background-color: $background-primary-button;
       border-color: mat-color($foreground, text, 0.32);
 
       &:hover,
@@ -560,15 +554,7 @@ $fashion-dark-theme-foreground: (base: rgba(white, 0.6),
     &.mat-button-base[ng-reflect-dialog-result="1"],
     &.mat-button-base[ng-reflect-dialog-result="false"] {
       color: mat-color($foreground, text);
-
-      @if $is-dark-theme {
-        background-color: transparent;
-      }
-
-      @else {
-        background-color: #ffffff;
-      }
-
+      background-color: $background-accent-button;
       border-color: mat-color($foreground, text, 0.32);
 
       &:hover,
